Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5528

Incorrect HTML link for referenced typedefs

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • None
    • 0.17.0
    • HTML - Compiler
    • None
    • Patch Available

    Description

      In the following code, when generated with thrift -gen html one will find that the link from Placeorder to FurtherRequirements is broken, because it points to a struct instead of a typedef.

      enum Requirement {
        FreeCoffee = 0,
        TakeCreditCards = 1,
      }
      
      typedef list< Requirement>  FurtherRequirements
      
      struct PlaceOrder
        3 : FurtherRequirements FurtherRequirements
      }
      

      Attachments

        Activity

          People

            jensg Jens Geyer
            jensg Jens Geyer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: