THRIFT-5528 Incorrect HTML link for referenced typedefs Client: html Patch: Jens Geyer